Tue Oct  3 11:49:10 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Reorganise classes in Quartz, in preparation for changing Diffs
	  objects into modified table objects.

Mon Oct  2 19:36:21 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Rename settings parameter quartz_modification_log to quartz_logfile.

	* Don't increment revision number when applying null modifications.

	* Added test for adding a document and reading it out again.
	  (Currently fails with an unimplemented error.)

Mon Oct  2 18:09:34 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Overhauled the indexer graph type-checker.  Types which start
	  with "*" are now wildcard types, replacing the "ANY" type, and
	  providing more type safety than before.

Mon Oct  2 17:08:44 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* operator delete now prints a slightly helpful message before
	  aborting for a bad delete.

Mon Oct  2 16:21:16 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Improved messages to quartz log - can now make log entries when
	  opened readonly, if requested.

	* quartzopen1 now checks behaviour of flush(), and time at which
	  documents get written to database.  (Currently fails).

Mon Oct  2 14:27:00 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Added utilities to pack and unpack integers to quartz_utils.h

Fri Sep 29 18:29:58 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Split XML-specific code into a separate file and cleaned up
	  the Makefile

	* Cleaned up the graph-building code (see above!)

	* Should now cope with comments anywhere in the XML file.

	* Can now build an indexer from an in-memory structure without
	  needing an XML description (fall-out from first item)

Fri Sep 29 13:38:10 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Workaround for a bad interaction between <rxposix.h> and some C++
	  header files like <map>
